<resources>
    <string name="app_name">Control of Medications and Household Articles</string>
    <string name="direction">Direction</string>
    <string name="branch">Branch</string>
    <string name="existence_detail">Existence Detail</string>
    <string name="sale">Sale</string>
    <string name="sale_detail">Sales Details</string>
    <string name="sale_invoice">Sales Invoice</string>
    <string name="client">Client</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_detail">Purchase Details</string>
    <string name="purchase_invoice">Purchase Invoice</string>
    <string name="supplier">Supplier</string>
    <string name="pharmaceutical_form">Pharmaceutical Form</string>
    <string name="brand">Brand</string>
    <string name="route_of_administration">Route of Administration</string>
    <string name="prescription">Prescription</string>
    <string name="doctor">Doctor</string>
    <string name="item">Item</string>
    <string name="category">Category</string>
    <string name="subcategory">Sub-Category</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="username_text">Username</string>
    <string name="connection_error">Connection error</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="welcome_message">Welcome</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="name_supplier">Name</string>
    <string name="phone_supplier">Phone</string>
    <string name="address_supplier">Address</string>
    <string name="industry_supplier">Industry</string>
    <string name="registration_number_supplier">Registration Number</string>
    <string name="tax_id_supplier">Tax ID</string>
    <string name="business_type_supplier">Business Type</string>
    <string name="add_supplier_dialog">Add Supplier</string>
    <string name="supplier_details_dialog">Supplier Details</string>
    <string name="edit_supplier_dialog">Edit Supplier</string>
    <string name="provider">Provider</string>
    <string name="provider_id">Provider ID</string>
    <string name="provider_nit">Provider NIT</string>
    <string name="provider_exists">A provider with this ID or NIT already exists</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="actions">Actions</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="id">ID</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_message">Are you sure you want to delete this</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="required_field">This field is required</string>
    <string name="only_letters">" Only letters are allowed"</string>
    <string name="only_numbers">" Only numbers are allowed"</string>
    <string name="nit_format">" The NIT must have the format ####-######-###-#"</string>
    <string name="field">The field</string>
    <string name="field_empty">Cannot be empty.</string>
    <string name="only_letters_and_numbers">Must contain only letters and numbers.</string>
    <string name="clear">Clear</string>
    <string name="id_forma_farmaceutica">ID Pharmaceutical Form</string>
    <string name="tipo_forma_farmaceutica">Type</string>
    <string name="options">Options</string>
    <string name="save_message">An item has been saved</string>
    <string name="confirm_delete">Delete record permanently?</string>
    <string name="delete_message">An record was deleted</string>
    <string name="confirm_delete_message">Delete record</string>
    <string name="update_message">An record was updated</string>
    <string name="action_block">This action is blocked</string>
    <string name="not_found_message">Reference not found</string>
    <string name="duplicate_message">The record is duplicated</string>
    <string name="invalid_date">Invalid date format</string>
    <string name="purchase_invoice_id">Purchase Invoice ID</string>
    <string name="purchase_invoice_date">Purchase Invoice Date</string>
    <string name="select_farmacia">Please select a pharmacy</string>
    <string name="select_proveedor">Please select a supplier</string>
    <string name="pharmacy_branch">Pharmacy Branch</string>
    <string name="invoice_id">ID Invoice</string>
    <string name="purchase_date">Invoice Date</string>
    <string name="select_articulo">Please select an item</string>
    <string name="select_factura">Please select an invoice</string>
    <string name="purchase_details">Purchase Details</string>
    <string name="view_purchase_details">View Purchase Details</string>
    <string name="id_purchase_detail">Purchase Detail ID</string>
    <string name="invoice_purchase">Purchase Invoice</string>
    <string name="date_purchase_detail">Purchase Detail Date</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="total_purchase">Total Purchase</string>
    <string name="items">Items</string>
    <string name="price">Price</string>
    <string name="stock_updated_message">"Stock successfully updated in detail # "</string>
    <string name="error_detalle_existencia_no_encontrado">There is no stock of this item in the specified pharmacy.</string>
    <string name="doctor_name">Name</string>
    <string name="doctor_specialty">Specialty</string>
    <string name="doctor_jvpm">Doctor JVPM</string>
    <string name="id_farmacia">Pharmacy Id</string>
    <string name="id_direccion">Address Id</string>
    <string name="nombre_farmacia">Pharmacy Name</string>
    <string name="farma_exists">There is already a Pharmacy with that ID</string>
    <string name="existence_detail_id">Existence Detail Id</string>
    <string name="existence_amount">Existence Amount</string>
    <string name="expiration_Date">Expiration Date</string>
    <string name="select_sucursal">Select a Branch</string>
    <string name="datos_validos">Please enter valid data</string>
    <string name="mostrar_farmacia">Show Branchs</string>
    <string name="mostrar_articulo">Show Items</string>
    <string name="select_departamento">Select a Department </string>
    <string name="select_municipio"> Select a municipality</string>
    <string name="select_distrito"> Select a district</string>
    <string name="departamento">Department </string>
    <string name="municipio"> Municipality</string>
    <string name="distrito"> District</string>
    <string name="select_valid_dep_mun_dis">You must select a valid Department, Municipality and District.</string>
    <string name="completar_Campos">Please complete all fields</string>
    <string name="select_addres">Select an Address</string>
    <string name="valid_addres">You must select a valid address.</string>
    <string name="category_prompt"> All </string>
    <string name="item_ID"> ID Item</string>
    <string name="id_doctor">Id Doctor</string>
    <string name="nombre_doctor">Name</string>
    <string name="jvpm">JVPM</string>
    <string name="query">Query</string>
    <string name="search">Search</string>
    <string name="search_error">Search error</string>
    <string name="invalid_search">Invalid search</string>
    <string name="nombre_marca">Brand name</string>
    <string name="id_marca">ID Brand</string>
    <string name="date">dd - mm - yyyy</string>
    <string name="description">Description</string>
    <string name="id_cliente">ID Client</string>
    <string name="id_receta">ID Prescription</string>
    <string name="fecha_receta">Date prescription</string>
    <string name="invalid_date_format">Invalid date format</string>
    <string name="id_via_administracion">Id route of administration</string>
    <string name="tipo_via_administracion">Type</string>
    <string name="especialidad_doctor">Specialization</string>
    <string name="brandID">Brand ID</string>
    <string name="ROAID">Route of administration ID</string>
    <string name="item_name">Item name</string>
    <string name="item_description">Item description</string>
    <string name="restricted">Restricted</string>
    <string name="pharmaceuticalFormID">Pharmaceutical Form ID</string>
    <string name="emptyWarning">This field is required</string>
    <string name="category_ID">ID Category</string>
    <string name="category_name">Category Name</string>
    <string name="subcategory_id">Subcategory ID</string>
    <string name="subcategory_name">Subcategory Name</string>
    <string name="id_client">Client Id</string>
    <string name="add_client_dialog_title">Add New Client</string>
    <string name="view_client_dialog_title">Client Details</string>
    <string name="edit_client_dialog_title">Edit Client</string>
    <string name="client_id_hint">Client ID</string>
    <string name="client_name_hint">Full Name</string>
    <string name="client_phone_hint">Phone (8 digits)</string>
    <string name="client_email_hint">Email</string>
    <string name="client_id_label">ID</string>
    <string name="client_name_label">Name</string>
    <string name="duplicate_client_message">A client with that ID or email already exists.</string>
    <string name="duplicate_email_message">Another client with that email already exists.</string>
    <string name="error_saving">Error saving client.</string>
    <string name="error_updating">Error updating client.</string>
    <string name="error_deleting">Error deleting client.</string>
    <string name="db_error">Database error. Please try again.</string>
    <string name="invalid_phone_format">Phone must be 8 digits.</string>
    <string name="invalid_email_format">Invalid email format.</string>
    <string name="only_letters_and_spaces"> must only contain letters and spaces.</string>
    <string name="client_phone_label">Phone</string>
    <string name="invalid_id_format">Invalid ID format.</string>
    <string name="sale_id_label">Sale</string>
    <string name="sale_date_label">Date</string>
    <string name="error_saving_sale_invoice">Error saving sales invoice.</string>
    <string name="sale_invoice_id_label">Sale ID</string>
    <string name="invalid_total_format">Invalid total format.</string>
    <string name="select_client_error">You must select a client.</string>
    <string name="select_farmacia_error">You must select a pharmacy.</string>
    <string name="error_processing_data">Error processing data.</string>
    <string name="select_client">Select a client</string>
    <string name="add_detalle_venta">Add Sale Detail</string>
    <string name="select_factura_venta">Select a sales invoice</string>
    <string name="only_numbers_id_detalle_venta">The sale detail ID must only contain numbers.</string>
    <string name="error_saving_data_format">Data format error when saving.</string>
    <string name="error_saving_data">Error saving data.</string>
    <string name="error_updating_data_format">Data format error when updating.</string>
    <string name="error_updating_data">Error updating data.</string>
    <string name="options_detalle_venta">Sale Detail Options</string>
    <string name="id_sale_detail">Sale Detail ID</string>
    <string name="hint_id_sale_detail">Enter sale detail ID</string>
    <string name="invoice_sale">Sales Invoice</string>
    <string name="date_sale_detail">Sale Detail Date</string>
    <string name="hint_date_sale_detail">Select date</string>
    <string name="unit_price_sale">Unit Price Sale</string>
    <string name="hint_unit_price_sale">Enter unit price</string>
    <string name="quantity_sale">Sale Quantity</string>
    <string name="hint_quantity_sale">Enter quantity</string>
    <string name="total_sale_detail">Sale Detail Total</string>
    <string name="hint_total_sale_detail">Calculated total</string>
</resources>