<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view" />

        <Button
            android:id="@+id/buttonViewDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_purchase_details"
            android:visibility="gone"/>

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</ScrollView>
