<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id" />

        <EditText
            android:id="@+id/edtIdMarca"
            android:hint="@string/id"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_marca" />

        <EditText
            android:id="@+id/edtNombreMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_marca"
            android:inputType="text|textCapCharacters" />

        <Button
            android:id="@+id/btnGuardarMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnLimpiarMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</ScrollView>
